--- a/contact.css
+++ b/contact.css
@@ -117,6 +117,7 @@ textarea {
 .clearfix::after {
   clear: both;
 }
+
 /*===================typography========================*/
 body {
   background-color: #ffffff;
@@ -126,6 +127,7 @@ body {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
+
 /*===================typography========================*/
 /*======================menubar========================*/
 .menubar {
@@ -138,6 +140,7 @@ body {
   z-index: 9999;
   box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
 }
+
 .menubar ul {
   list-style-type: none;
   padding: 0;
@@ -146,11 +149,13 @@ body {
   display: flex;
   justify-content: space-around;
 }
+
 .menubar ul li {
   display: flex;
   vertical-align: middle;
   align-items: center;
 }
+
 .menubar a {
   text-decoration: none;
   letter-spacing: 1px;
@@ -160,13 +165,16 @@ body {
   color: #505050 !important;
   vertical-align: middle;
 }
+
 .menubar a:hover {
   background-color: grey;
 }
+
 img.logo {
   width: 50px;
   height: fit-content;
 }
+
 a.logo {
   text-decoration: none;
   text-transform: uppercase;
@@ -176,6 +184,7 @@ a.logo {
   color: #ffffff;
   vertical-align: middle;
 }
+
 .content_container input[type="text"] {
   float: right;
   padding: 6px;
@@ -187,11 +196,13 @@ a.logo {
   border-left: 0px;
   font-size: 17px;
 }
+
 ::placeholder {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
 }
+
 /*======================herobanner========================*/
 .stripe {
   display: grid;
@@ -199,10 +210,8 @@ a.logo {
 }
 
 .stripe.introduction {
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.65),
-      rgba(255, 255, 255, 0.65)
-    ),
+  background-image: linear-gradient(rgba(255, 255, 255, 0.65),
+      rgba(255, 255, 255, 0.65)),
     url("images/intro.jpg");
   background-size: 100%;
   height: 60vh;
@@ -233,9 +242,11 @@ a.logo {
   margin-right: auto;
   letter-spacing: 2px;
 }
+
 .topnav {
   display: none;
 }
+
 /*======================Form========================*/
 .container {
   margin-top: 10vh;
@@ -243,19 +254,23 @@ a.logo {
   margin-left: 5vw;
   margin-right: 5vw;
 }
+
 .container h1 {
   text-align: center;
   margin-top: 0;
   font-family: "Lato", sans-serif;
 }
+
 form {
   display: flex;
   flex-direction: column;
 }
+
 label {
   margin-top: 10px;
   font-weight: bold;
 }
+
 input[type="text1"],
 input[type="email"],
 textarea {
@@ -271,6 +286,7 @@ textarea {
   min-height: 40px;
   font-family: "Lato", sans-serif;
 }
+
 input[type="submit"] {
   background-color: #4caf50;
   color: white;
@@ -283,18 +299,22 @@ input[type="submit"] {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   margin-top: 15px;
 }
+
 input[type="submit"]:hover {
   background-color: #3e8e41;
 }
+
 .required:after {
   content: " *";
   color: #f00;
 }
+
 .error {
   color: #f00;
   font-size: 14px;
   margin-top: 5px;
 }
+
 .success {
   color: #4caf50;
   font-size: 14px;
@@ -310,11 +330,13 @@ div.footer1 {
   margin-left: auto;
   margin-right: auto;
 }
+
 div.footer2 {
   margin-top: 10px;
   margin-left: 30vw;
   margin-right: 30vw;
 }
+
 p.footer1 {
   margin-left: auto;
   margin-right: auto;
@@ -324,16 +346,19 @@ p.footer1 {
   letter-spacing: 1px;
   font-size: 18px;
 }
+
 p.footer2 {
   color: #ffffff;
   text-align: center;
   font-size: 14px;
 }
+
 img.logoend {
   display: block;
   width: 50%;
   margin: auto;
 }
+
 p.logoend {
   text-decoration: none;
   text-transform: uppercase;
@@ -345,6 +370,7 @@ p.logoend {
   color: #ffffff;
   vertical-align: middle;
 }
+
 .footer {
   padding-top: 40px;
   padding-bottom: 20px;
@@ -353,15 +379,18 @@ p.logoend {
   grid-template-columns: [col1] 1fr [col7];
   grid-gap: 0px;
 }
+
 /*======================footer========================*/
 .content_container {
   grid-column-start: col1;
   grid-column-end: col7;
 }
+
 .content_container.page_grid {
   display: grid;
   grid-gap: 20px 0px;
 }
+
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   font-size: 1em;
@@ -406,22 +435,35 @@ p.logoend {
 }
 
 #top {
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: #70cf84; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 5px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 99;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  background-color: #70cf84;
+  /* Set a background color */
+  color: white;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 15px;
+  /* Some padding */
+  border-radius: 5px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
 }
 
 #top:hover {
-  background-color: #505050; /* Add a dark-grey background on hover */
+  background-color: #505050;
+  /* Add a dark-grey background on hover */
 }
 
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
@@ -429,19 +471,23 @@ p.logoend {
   .stripe {
     grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
   }
+
   .content_container.page_grid {
     display: grid;
     grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
     grid-gap: 40px;
   }
 }
+
 @media (min-width: 768px) and (max-width: 1279px) {
   .menubar ul {
     display: none;
   }
+
   .topnav {
     display: block;
   }
+
   .topnav a {
     float: left;
     display: block;
@@ -451,41 +497,51 @@ p.logoend {
     text-decoration: none;
     font-size: 17px;
   }
+
   .topnav a:not(:first-child) {
     display: none;
   }
+
   .topnav a.icon1 {
     float: right;
     display: block;
   }
+
   .topnav a.icon2 {
     float: right;
     display: block;
   }
+
   .topnav.responsive {
     position: relative;
   }
+
   .topnav.responsive .icon1 {
     position: absolute;
     right: 6.5vw;
     top: 0;
   }
+
   .topnav.responsive .icon2 {
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+
   .stripe.introduction {
     background-size: 100%;
   }
+
   .stripe.introduction h1 {
     font-size: 3.5em;
   }
+
   .stripe.introduction h2 {
     font-size: 18px;
     margin-top: 5vh;
@@ -493,13 +549,16 @@ p.logoend {
     margin-right: 5vw;
   }
 }
+
 @media (min-width: 375px) and (max-width: 767px) {
   .menubar ul {
     display: none;
   }
+
   .topnav {
     display: block;
   }
+
   .topnav a {
     float: left;
     display: block;
@@ -509,59 +568,73 @@ p.logoend {
     text-decoration: none;
     font-size: 17px;
   }
+
   .topnav a:not(:first-child) {
     display: none;
   }
+
   .topnav a.icon1 {
     float: right;
     display: block;
   }
+
   .topnav a.icon2 {
     float: right;
     display: block;
   }
+
   .topnav.responsive {
     position: relative;
   }
+
   .topnav.responsive .icon1 {
     position: absolute;
     right: 12vw;
     top: 0;
   }
+
   .topnav.responsive .icon2 {
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+
   .stripe.introduction {
     background-size: 175%;
   }
+
   .stripe.introduction h1 {
     font-size: 2em;
     margin-top: 20vh;
   }
+
   .stripe.introduction h2 {
     font-size: 16px;
     margin-top: 5vh;
     margin-left: 5vw;
     margin-right: 5vw;
   }
+
   .container {
     margin-top: 0vh;
   }
 }
+
 @media only screen and (max-width: 374px) {
   .menubar ul {
     display: none;
   }
+
   .topnav {
     display: block;
   }
+
   .topnav a {
     float: left;
     display: block;
@@ -571,56 +644,68 @@ p.logoend {
     text-decoration: none;
     font-size: 17px;
   }
+
   .topnav a:not(:first-child) {
     display: none;
   }
+
   .topnav a.icon1 {
     float: right;
     display: block;
   }
+
   .topnav a.icon2 {
     float: right;
     display: block;
   }
+
   .topnav.responsive {
     position: relative;
   }
+
   .topnav.responsive .icon1 {
     position: absolute;
     right: 12vw;
     top: 0;
   }
+
   .topnav.responsive .icon2 {
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+
   .stripe.introduction {
     background-size: 300%;
   }
+
   .stripe.introduction h1 {
     font-size: 2em;
     margin-top: 20vh;
   }
+
   .stripe.introduction h2 {
     font-size: 16px;
     margin-top: 5vh;
     margin-left: 5vw;
     margin-right: 5vw;
   }
+
   .container {
     margin-top: 0vh;
   }
 }
+
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -631,6 +716,7 @@ p.logoend {
      ========================================================================== */
 
 @media print {
+
   *,
   *::before,
   *::after {
